--- a/Page Wire/Base.lproj/Main.storyboard
+++ b/Page Wire/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="giT-8x-jbv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="giT-8x-jbv">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -119,36 +119,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cG2-R4-UPz">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="756"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchResultTextTableViewCell" id="MMO-dT-Y17" customClass="SearchResultTextTableViewCell" customModule="Page_Wire" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="44.333332061767578"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MMO-dT-Y17" id="UGf-gd-FGO">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="44.333332061767578"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjH-qF-21r">
-                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="36.333333333333336"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="36" id="p7k-JE-Epe"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
-                                                    <color key="textColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="cjH-qF-21r" secondAttribute="trailing" id="G7S-3b-GwM"/>
-                                                <constraint firstItem="cjH-qF-21r" firstAttribute="top" secondItem="UGf-gd-FGO" secondAttribute="top" id="Q6r-ke-LYg"/>
-                                                <constraint firstAttribute="bottom" secondItem="cjH-qF-21r" secondAttribute="bottom" constant="8" id="QPu-Uv-jYD"/>
-                                                <constraint firstItem="cjH-qF-21r" firstAttribute="leading" secondItem="UGf-gd-FGO" secondAttribute="leading" id="WyK-zl-BYf"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="searchTextLabel" destination="cjH-qF-21r" id="bdE-23-d98"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
                                 <sections/>
                                 <connections>
                                     <outlet property="dataSource" destination="LOQ-z6-j0h" id="wqo-Fd-eDv"/>
@@ -160,7 +130,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="cG2-R4-UPz" secondAttribute="bottom" id="dMk-Rs-jfv"/>
-                            <constraint firstItem="cG2-R4-UPz" firstAttribute="top" secondItem="5GP-OP-jC9" secondAttribute="top" id="p1Q-vf-Qkg"/>
+                            <constraint firstItem="cG2-R4-UPz" firstAttribute="top" secondItem="5GP-OP-jC9" secondAttribute="top" id="nh5-zP-ugw"/>
                             <constraint firstItem="5GP-OP-jC9" firstAttribute="trailing" secondItem="cG2-R4-UPz" secondAttribute="trailing" id="vOv-Vp-oYl"/>
                             <constraint firstItem="cG2-R4-UPz" firstAttribute="leading" secondItem="5GP-OP-jC9" secondAttribute="leading" id="zz3-Oo-eaf"/>
                         </constraints>
@@ -182,15 +152,39 @@
             <objects>
                 <viewController storyboardIdentifier="BookInfoVC" title="Book Info" modalTransitionStyle="flipHorizontal" id="Nk9-rm-xV8" customClass="BookInfoVC" customModule="Page_Wire" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RRe-yp-975">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="756"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-yy-wdD">
-                                <rect key="frame" x="16" y="32" width="358" height="690"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hRe-9y-Nqo">
+                                <rect key="frame" x="24" y="120.00000000000001" width="342" height="60.666666666666671"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SaC-gS-MVu">
+                                        <rect key="frame" x="148.66666666666666" y="0.0" width="45" height="26.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3f-dk-dnf">
+                                        <rect key="frame" x="141.66666666666666" y="34.333333333333343" width="58.666666666666657" height="26.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-yy-wdD">
+                                <rect key="frame" x="16" y="196.66666666666669" width="358" height="613.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                <attributedString key="attributedText">
+                                    <fragment>
+                                        <mutableString key="content">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <attributes>
+                                            <color key="NSColor" systemColor="labelColor"/>
+                                            <font key="NSFont" metaFont="system" size="15"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="3" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <connections>
                                     <outlet property="delegate" destination="Nk9-rm-xV8" id="uX0-Jj-g9m"/>
@@ -200,23 +194,28 @@
                         <viewLayoutGuide key="safeArea" id="SG8-Gp-Rtd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="lj6-yy-wdD" firstAttribute="top" secondItem="hRe-9y-Nqo" secondAttribute="bottom" constant="16" id="Aym-4C-x5J"/>
                             <constraint firstItem="lj6-yy-wdD" firstAttribute="leading" secondItem="SG8-Gp-Rtd" secondAttribute="leading" constant="16" id="DMi-iW-KQD"/>
-                            <constraint firstItem="lj6-yy-wdD" firstAttribute="top" secondItem="SG8-Gp-Rtd" secondAttribute="top" constant="32" id="HKK-Kk-EPu"/>
+                            <constraint firstItem="hRe-9y-Nqo" firstAttribute="top" secondItem="SG8-Gp-Rtd" secondAttribute="top" constant="32" id="LGp-4F-lDa"/>
+                            <constraint firstItem="hRe-9y-Nqo" firstAttribute="leading" secondItem="SG8-Gp-Rtd" secondAttribute="leading" constant="24" id="UIR-an-VTx"/>
+                            <constraint firstItem="SG8-Gp-Rtd" firstAttribute="trailing" secondItem="hRe-9y-Nqo" secondAttribute="trailing" constant="24" id="YLK-sx-gra"/>
                             <constraint firstItem="SG8-Gp-Rtd" firstAttribute="bottom" secondItem="lj6-yy-wdD" secondAttribute="bottom" id="Z3A-Za-QNd"/>
                             <constraint firstItem="SG8-Gp-Rtd" firstAttribute="trailing" secondItem="lj6-yy-wdD" secondAttribute="trailing" constant="16" id="jLy-Ny-XSX"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Info" largeTitleDisplayMode="always" id="UOi-Nc-3mR">
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="UOi-Nc-3mR">
                         <barButtonItem key="backBarButtonItem" title=" " id="YjL-gK-mho"/>
                     </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="authorLabel" destination="w3f-dk-dnf" id="vBo-ZM-qRQ"/>
                         <outlet property="textView" destination="lj6-yy-wdD" id="20e-Yk-3Md"/>
+                        <outlet property="titleLabel" destination="SaC-gS-MVu" id="Izn-cB-Y47"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VSN-tA-xBH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7615" y="-269"/>
+            <point key="canvasLocation" x="7613.8461538461534" y="-269.43127962085305"/>
         </scene>
         <!--Book Discovery Navigation-->
         <scene sceneID="gMy-p3-bdi">
@@ -360,11 +359,11 @@
                         <constraints>
                             <constraint firstItem="pXe-aR-CYv" firstAttribute="leading" secondItem="Ww2-7d-CMm" secondAttribute="leading" id="Gce-TP-IEK"/>
                             <constraint firstItem="Ww2-7d-CMm" firstAttribute="trailing" secondItem="pXe-aR-CYv" secondAttribute="trailing" id="J2i-EB-Pc8"/>
-                            <constraint firstItem="pXe-aR-CYv" firstAttribute="top" secondItem="Ww2-7d-CMm" secondAttribute="top" id="Xz4-9T-Ih9"/>
+                            <constraint firstItem="pXe-aR-CYv" firstAttribute="top" secondItem="Ww2-7d-CMm" secondAttribute="top" id="c9f-CY-cZZ"/>
                             <constraint firstItem="Ww2-7d-CMm" firstAttribute="bottom" secondItem="pXe-aR-CYv" secondAttribute="bottom" id="hF4-Xr-gNB"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Detail" largeTitleDisplayMode="always" id="Bzg-xN-xDb">
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="Bzg-xN-xDb">
                         <barButtonItem key="backBarButtonItem" title=" " id="Fwx-KD-1BO"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
