--- a/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
+++ b/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="137" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="137" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="334" height="137"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oqw-cy-Qwh" id="I6t-qC-jb4">
@@ -16,36 +17,24 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-aq-eeq">
-                        <rect key="frame" x="8" y="21.666666666666664" width="65" height="98.333333333333343"/>
+                        <rect key="frame" x="8" y="21.666666666666657" width="65" height="98"/>
                         <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="65" id="4YY-eq-rQS"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
                         <rect key="frame" x="89" y="20" width="199" height="101"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-4i-NdS">
-                                <rect key="frame" x="0.0" y="0.0" width="199" height="22.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <rect key="frame" x="0.0" y="0.0" width="199" height="50.666666666666664"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzm-9y-3Pa">
-                                <rect key="frame" x="0.0" y="26.333333333333336" width="199" height="22.333333333333336"/>
+                                <rect key="frame" x="0.0" y="50.666666666666671" width="199" height="50.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQM-B2-WwC" userLabel="Pages Label">
-                                <rect key="frame" x="0.0" y="52.666666666666671" width="199" height="22"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nqy-or-Th2" userLabel="Publisher Label">
-                                <rect key="frame" x="0.0" y="78.666666666666671" width="199" height="22.333333333333329"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -68,6 +57,7 @@
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="Poe-np-PtH"/>
                     <constraint firstAttribute="trailing" secondItem="6kR-Ge-tqs" secondAttribute="trailing" constant="8" id="Qib-Vk-px5"/>
                     <constraint firstAttribute="bottom" secondItem="VMv-aq-eeq" secondAttribute="bottom" constant="16" id="UU9-Ki-svg"/>
+                    <constraint firstAttribute="bottom" secondItem="46b-Xt-TFA" secondAttribute="bottom" constant="16" id="glG-8J-OLz"/>
                     <constraint firstItem="6kR-Ge-tqs" firstAttribute="leading" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="8" id="qYm-EM-ZFF"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="tKm-nn-uWn"/>
                     <constraint firstItem="6kR-Ge-tqs" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="tdS-by-Aht"/>
@@ -78,15 +68,13 @@
                 <outlet property="artwork" destination="VMv-aq-eeq" id="XDa-Yp-jtp"/>
                 <outlet property="authorLabel" destination="nzm-9y-3Pa" id="zch-M9-RV7"/>
                 <outlet property="favoriteButton" destination="6kR-Ge-tqs" id="gEO-jx-5Au"/>
-                <outlet property="pagesLabel" destination="ZQM-B2-WwC" id="WVG-uB-0BS"/>
-                <outlet property="publisherLabel" destination="Nqy-or-Th2" id="ozX-uv-JG6"/>
                 <outlet property="titleLabel" destination="oRU-4i-NdS" id="dF4-bv-elN"/>
             </connections>
             <point key="canvasLocation" x="147.69230769230768" y="26.658767772511847"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="book.fill" catalog="system" width="128" height="102"/>
+        <image name="book.fill" catalog="system" width="128" height="95"/>
         <image name="heart" catalog="system" width="128" height="109"/>
     </resources>
 </document>
